Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-25105

Ephemeral with no-eviction does not expire items when high watermark reached

    XMLWordPrintable

Details

    • Untriaged
    • Unknown
    • KV Spock Code Freeze

    Description

      When an Ephemeral bucket with no-eviction reaches the high watermark, it does not trigger the deletion of items whose TTL has expired. As a result, memory usage (and item count) will remain at an elevated level until the periodic expiryPager next runs (default cadence - 1hour).

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              drigby Dave Rigby (Inactive)
              drigby Dave Rigby (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty