MB-25105: Rename wakeUpItemPager to attemptToFreeMemory

While currenlty his function does one thing - wakes up the item pager
- we want to override it for Ephemeral buckets to use different
methods to free memory; hence renaming it to reflect the request made,
not what the implementation is.

Change-Id: Iede8cd14ba0a1ef4b6fec5b02f039b8618ae0167
Reviewed-on: http://review.couchbase.org/80240
Reviewed-by: David Haikney <david.haikney@couchbase.com>
Reviewed-by: Sriram Ganesan <sriram@couchbase.com>
Reviewed-by: Manu Dhundi <manu@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>